[gd_scene load_steps=6 format=2]

[ext_resource path="res://Autoload/SceneChanger.gd" type="Script" id=1]
[ext_resource path="res://Assate/shader/screen_transition_1.shader" type="Shader" id=2]
[ext_resource path="res://Assate/SFX/MainMenuTransition.wav" type="AudioStream" id=3]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 2 )
shader_param/progress = 0.0
shader_param/dimoundPixelSize = 10.0

[sub_resource type="Animation" id=2]
resource_name = "transition"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:material:shader_param/progress")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0, 0.0 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("../..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.7 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_excute_transition"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../../SceneTransitionConfirm:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="SceneChanger" type="Node2D"]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 128

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
material = SubResource( 1 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/ColorRect"]
anims/transition = SubResource( 2 )

[node name="SceneTransitionConfirm" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[connection signal="start_transition" from="." to="." method="_on_scene_transition_started"]
